# Bicho

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  bicho  bicho.in  config.sample  configure.in  index.html  params.json  setup.py
Bicho/: Bicho.py  Bug.py  Config.py  Makefile.am  SqlBug.py  bicho.conf  common.py  config.py  config.py.in  database.py  info.py  main.py  utils.py
Bicho/backends/: HTMLParser.py  HTMLUtils.py  Makefile.am  ParserSFBugs.py  __init__.py  allura.py  bg.py  downloader.py  gerrit.py  github.py  googlecode.py  jira.py  lp.py  parsers.py  redmine.py  sf.py
Bicho/backends/bugzilla/: model.py  parsers.py  urls.py
Bicho/db/: database.py  mysql.py
Bicho/post_processing/: IssuesLog.py  __init__.py  issues_log.py  issues_log_bg.py  issues_log_gerrit.py  issues_log_jira.py  issues_log_lp.py  issues_log_redmine.py  logtable.py
bicho/: bicho.conf  common.py  config.py  exceptions.py  main.py  utils.py
common/: bicho-autogen.sh
debian/: bicho.1  changelog  control  copyright  rules
doc/: Bicho_State_Diagram.dia  Tables_Bicho_sql.txt  UserManual.txt  bicho.1  original_bicho.xml
test/: ticket_allura.json  tickets_allura.json
tests/: README.md  __init__.py  allura_test.py  launchpad.py  mock_http_server.py  run_tests.py  test_allura.py  test_backend.py  test_backend_manager.py  test_bugzilla_model.py  test_bugzilla_parsers.py  test_bugzilla_urls.py  test_common.py  test_downloader.py  test_exceptions.py  test_parsers.py  test_redmine_model.py  test_redmine_parsers.py  test_redmine_urls.py  utilities.py
(+156 files in other folders)
